[gd_scene load_steps=4 format=3 uid="uid://dqsys4duylgxj"]

[ext_resource type="Script" path="res://modeli/coin.gd" id="1_3sglt"]
[ext_resource type="Texture2D" uid="uid://bg4ds72o4a34m" path="res://modeli/coin.png" id="2_jb4g6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i3g0u"]
radius = 91.444

[node name="coin" type="Node2D"]
script = ExtResource("1_3sglt")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_i3g0u")

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(58, 105)
scale = Vector2(1.25519, 1.33031)
texture = ExtResource("2_jb4g6")

[node name="resp" type="Timer" parent="."]
one_shot = true

[node name="despawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="resp" to="." method="_on_resp_timeout"]
[connection signal="timeout" from="despawn" to="." method="_on_despawn_timeout"]
